# MOJIZA_FRAMEWORK-1.0.1

./: .gitignore  .gitignore   LICENSE  README.md  README_my.md  manage.py  pyproject.toml  r.txt  runer.py  setup.py
MOJIZA/: runer.py
MOJIZA/engine/: p_gen.py  routing.py  server.py  views.py
MOJIZA/models/: base.py
MOJIZA/static/: make_static.py
app/: urls.py  views.py
config/: views.py
projectpapca/: backend_html.py  settings.py  urls.py  views.py
