[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mojiza"
version = "0.1.0"
description = "A lightweight Python web framework"
authors = [{ name = "Abdulhodiy", email = "muhiddinovabdulhodiy2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "aiosqlite",
    "Jinja2>=3.1.4",
    "loguru>=0.7.3",
    "watchdog>=6.0.0",
    "aiohttp>=3.11.10",
    "qrcode>=8.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Mojiza",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
